--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -35,9 +35,13 @@ LoadModule cache_module modules/mod_cache.so
 <IfDefine !CACHE_MEMORY>
 LoadModule cache_disk_module modules/mod_cache_disk.so
 </IfDefine>
+<IfDefine CACHE_BOTH>
+LoadModule cache_socache_module modules/mod_cache_socache.so
+LoadModule cache_disk_module modules/mod_cache_disk.so
 </IfDefine>
 <IfDefine CACHE_MEMORY>
 LoadModule cache_socache_module modules/mod_cache_socache.so
+</IfDefine>
 </IfDefine>
 LoadModule include_module modules/mod_include.so
 LoadModule deflate_module modules/mod_deflate.so
@@ -86,6 +90,9 @@ LoadModule authn_core_module modules/mod_authn_core.so
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule http2_module         modules/mod_http2.so
 LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
+<IfDefine BROTLI>
+LoadModule brotli_module modules/mod_brotli.so
+</IfDefine>
 #
 ###########################################################################
 # Custom modules will be added by apxs below here and carried over
@@ -282,9 +289,10 @@ RLimitMem 268435456
 RLimitNProc 15 50
 
 SetEnv PERL5LIB /usr/local/lib/perl5/site_perl
-
+<IfDefine BROTLI>
+AddOutputFilterByType BROTLI_COMPRESS text/html text/xml text/css text/plain text/javascript application/x-javascript application/javascript image/svg+xml 
+</IfDefine>
 AddOutputFilterByType DEFLATE text/html text/xml text/css text/plain text/javascript application/x-javascript application/javascript image/svg+xml 
-
 # shtml does not parse with Apache 2.2.17 and DEFLATE
 <Files  "*.shtml">
   SetEnv no-gzip
