--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -290,9 +290,9 @@ RLimitNProc 15 50
 
 SetEnv PERL5LIB /usr/local/lib/perl5/site_perl
 <IfDefine BROTLI>
-AddOutputFilterByType BROTLI_COMPRESS text/html text/xml text/css text/plain text/javascript application/x-javascript application/javascript image/svg+xml 
+AddOutputFilterByType BROTLI_COMPRESS text/html text/xml text/css text/plain text/javascript application/json application/javascript image/svg+xml 
 </IfDefine>
-AddOutputFilterByType DEFLATE text/html text/xml text/css text/plain text/javascript application/x-javascript application/javascript image/svg+xml 
+AddOutputFilterByType DEFLATE text/html text/xml text/css text/plain text/javascript application/json application/javascript image/svg+xml 
 # shtml does not parse with Apache 2.2.17 and DEFLATE
 <Files  "*.shtml">
   SetEnv no-gzip
