--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -54,6 +54,7 @@ LoadModule unique_id_module modules/mod_unique_id.so
 LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_connect_module modules/mod_proxy_connect.so
+LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
 <IfDefine !NO_SSL>
 LoadModule ssl_module modules/mod_ssl.so
