SSI optional, facilitates side-channel attack through symlink circumvention Disable posix_getpwnam, allows lock-up in virtual domain Server override macro, OVERRIDE_POLICY

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -1,24 +1,24 @@
 ###################################################################
 #
-#      .___          /\ __      __                       .__     
-#    __| _/____   ___)//  |_  _/  |_  ____  __ __   ____ |  |__  
-#   / __ |/  _ \ /    \   __\ \   __\/  _ \|  |  \_/ ___\|  |  \ 
+#      .___          /\ __      __                       .__
+#    __| _/____   ___)//  |_  _/  |_  ____  __ __   ____ |  |__
+#   / __ |/  _ \ /    \   __\ \   __\/  _ \|  |  \_/ ___\|  |  \
 #  / /_/ (  <_> )   |  \  |    |  | (  <_> )  |  /\  \___|   Y  \
 #  \____ |\____/|___|  /__|    |__|  \____/|____/  \___  >___|  /
-#       \/           \/                                \/     \/ 
-#  
+#       \/           \/                                \/     \/
+#
 ###################################################################
 #            Make all local changes to httpd-custom.conf
 ###################################################################
 
 ServerRoot "/etc/httpd"
 
-#
+
 # Listen: Allows you to bind Apache to specific IP addresses and/or
 # ports, instead of the default. See also the <VirtualHost>
 # directive.
 #
-# Change this to Listen on specific IP addresses as shown below to 
+# Change this to Listen on specific IP addresses as shown below to
 # prevent Apache from glomming onto all bound IP addresses.
 #
 GracefulShutdownTimeout 15
@@ -30,6 +30,7 @@ LoadModule authz_groupfile_module modules/mod_authz_groupfile.so
 LoadModule authz_user_module modules/mod_authz_user.so
 LoadModule authz_dbm_module modules/mod_authz_dbm.so
 LoadModule auth_basic_module modules/mod_auth_basic.so
+
 <IfDefine !NO_CACHE>
 LoadModule cache_module modules/mod_cache.so
 <IfDefine !CACHE_MEMORY>
@@ -43,7 +44,11 @@ LoadModule cache_disk_module modules/mod_cache_disk.so
 LoadModule cache_socache_module modules/mod_cache_socache.so
 </IfDefine>
 </IfDefine>
+
+<IfDefine SSI>
 LoadModule include_module modules/mod_include.so
+</IfDefine>
+
 LoadModule deflate_module modules/mod_deflate.so
 LoadModule log_config_module modules/mod_log_config.so
 LoadModule logio_module modules/mod_logio.so
@@ -56,11 +61,11 @@ LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_connect_module modules/mod_proxy_connect.so
 LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
+
 <IfDefine !NO_SSL>
 LoadModule ssl_module modules/mod_ssl.so
 </IfDefine>
 LoadModule mime_module modules/mod_mime.so
-LoadModule dav_module modules/mod_dav.so
 
 <IfDefine STATUS>
   LoadModule status_module modules/mod_status.so
@@ -69,7 +74,12 @@ LoadModule dav_module modules/mod_dav.so
 LoadModule autoindex_module modules/mod_autoindex.so
 LoadModule suexec_module modules/mod_suexec.so
 LoadModule cgid_module modules/mod_cgid.so
+
+<IfDefine DAV>
+LoadModule dav_module modules/mod_dav.so
 LoadModule dav_fs_module modules/mod_dav_fs.so
+</IfDefine>
+
 LoadModule negotiation_module modules/mod_negotiation.so
 LoadModule dir_module modules/mod_dir.so
 LoadModule alias_module modules/mod_alias.so
@@ -91,6 +101,7 @@ LoadModule authn_core_module modules/mod_authn_core.so
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule http2_module         modules/mod_http2.so
 LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
+
 <IfDefine BROTLI>
 LoadModule brotli_module modules/mod_brotli.so
 </IfDefine>
@@ -134,29 +145,33 @@ ServerSignature Off
 UseCanonicalName off
 PidFile run/httpd.pid
 
+<IfDefine !OVERRIDE_POLICY>
+Define OVERRIDE_POLICY "AuthConfig FileInfo Indexes Limit Options=Indexes,MultiViews,SSLOptions"
+</IfDefine>
+
 <Directory />
   Options FollowSymLinks
   AllowOverride None
 </Directory>
 
 <Directory /home/virtual/site*/fst/var/subdomain/*/html>
-  AllowOverride All
+  AllowOverride ${OVERRIDE_POLICY}
   Options SymLinksIfOwnerMatch
 </Directory>
 
 <Directory /home/virtual/site*/fst/home/*>
-  AllowOverride All
+  AllowOverride ${OVERRIDE_POLICY}
   Options SymLinksIfOwnerMatch
 </Directory>
 
 <Directory /home/virtual/site*/fst/var/www>
-  AllowOverride All
+  AllowOverride ${OVERRIDE_POLICY}
   Options SymLinksIfOwnerMatch
 </Directory>
 
-
 <IfDefine PHP_INSTALLED>
   php_admin_value open_basedir "/var/www:/tmp:/usr:/.socket"
+  php_admin_value disabled_functions "posix_getpwnam,syslog"
   php_admin_value memory_limit 192M
 </IfDefine>
 
@@ -166,7 +181,7 @@ PidFile run/httpd.pid
     php_value upload_max_filesize 64M
   </IfDefine>
 
-  AllowOverride All
+  AllowOverride AuthConfig FileInfo Indexes Limit Options=Indexes,MultiViews,SSLOptions
   Options FollowSymLinks
   RewriteOptions InheritBefore
   RewriteBase "/var/www/html"
@@ -185,12 +200,15 @@ PidFile run/httpd.pid
   </Location>
 </IfModule>
 
+DirectoryIndex index.html index.php index.fcgi
+<IfModule include_module>
+DirectoryIndex index.shtml
+</IfModule>
 
-DirectoryIndex index.html index.php index.shtml index.fcgi
 HostnameLookups off
 
-# The following lines prevent .htaccess and .htpasswd files from being 
-# viewed by Web clients. 
+# The following lines prevent .htaccess and .htpasswd files from being
+# viewed by Web clients.
 <Files ".*">
     Order allow,deny
     Deny from all
@@ -244,7 +262,7 @@ EnableMMAP on
   StartServers          5
   MaxClients          250
   MinSpareThreads      25
-  MaxSpareThreads      75 
+  MaxSpareThreads      75
   ThreadsPerChild      25
   MaxConnectionsPerChild   128
 </IfModule>
@@ -269,8 +287,8 @@ AddType application/x-httpd-php-source .phps
   SSLRandomSeed connect builtin
   SSLStaplingCache shmcb:/tmp/ocsp(256000)
 
-  SSLUseStapling on                                                                                                                             
-  SSLStaplingResponderTimeout 5                                                                                                                               
+  SSLUseStapling on
+  SSLStaplingResponderTimeout 5
   SSLStaplingReturnResponderErrors on
   SSLCertificateFile /etc/ssl/certs/server.pem
 </IfModule>
@@ -290,10 +308,11 @@ RLimitMem 268435456
 RLimitNProc 15 50
 
 SetEnv PERL5LIB /usr/local/lib/perl5/site_perl
+
 <IfDefine BROTLI>
-AddOutputFilterByType BROTLI_COMPRESS text/html text/xml text/css text/plain text/javascript application/json application/javascript image/svg+xml 
+AddOutputFilterByType BROTLI_COMPRESS text/html text/xml text/css text/plain text/javascript application/json application/javascript image/svg+xml
 </IfDefine>
-AddOutputFilterByType DEFLATE text/html text/xml text/css text/plain text/javascript application/json application/javascript image/svg+xml 
+AddOutputFilterByType DEFLATE text/html text/xml text/css text/plain text/javascript application/json application/javascript image/svg+xml
 # shtml does not parse with Apache 2.2.17 and DEFLATE
 <Files  "*.shtml">
   SetEnv no-gzip
@@ -324,8 +343,10 @@ Include conf/httpd-apnscp-rewrite-map.conf
   CoreDumpDirectory /tmp
 </IfDefine>
 
+Define VIRTUAL_BASE /home/virtual
+
 # BEGIN COMMON ASSETS
-<DirectoryMatch "^/home/virtual/site[0-9]+/fst/(?:var/www|home/[^/]*)/.+/(.*/)?(?:wp-content/uploads/|wp-content/cache|cache/|sites/default/).*$">
+<DirectoryMatch "^${VIRTUAL_BASE}/site[0-9]+/fst/(?:var/www|home/[^/]*)/.+/(.*/)?(?:wp-content/uploads/|wp-content/cache|cache/|sites/default/).*$">
   RemoveHandler .pl .py .cgi
   RemoveType .php
   AllowOverride None
