--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -146,7 +146,7 @@ UseCanonicalName off
 PidFile run/httpd.pid
 
 <IfDefine !OVERRIDE_POLICY>
-Define OVERRIDE_POLICY "AuthConfig FileInfo Indexes Limit Options=Indexes,MultiViews,SSLOptions"
+Define OVERRIDE_POLICY "AuthConfig FileInfo Indexes Limit Options=Indexes,MultiViews,SSLOptions,ExecCGI"
 </IfDefine>
 
 <Directory />
