disable_functions, not disabled

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -171,7 +171,7 @@ Define OVERRIDE_POLICY "AuthConfig FileInfo Indexes Limit Options=Indexes,MultiV
 
 <IfDefine PHP_INSTALLED>
   php_admin_value open_basedir "/var/www:/tmp:/usr:/.socket"
-  php_admin_value disabled_functions "posix_getpwnam,syslog"
+  php_admin_value disable_functions "posix_getpwnam,syslog"
   php_admin_value memory_limit 192M
 </IfDefine>
 
