--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -146,7 +146,7 @@ UseCanonicalName off
 PidFile run/httpd.pid
 
 <IfDefine !OVERRIDE_POLICY>
-Define OVERRIDE_POLICY "AuthConfig FileInfo Indexes Limit Options=Indexes,MultiViews,ExecCGI"
+Define OVERRIDE_POLICY "AuthConfig FileInfo Indexes Limit Options=Indexes,MultiViews,ExecCGI,SymLinksIfOwnerMatch"
 </IfDefine>
 
 <Directory />
@@ -181,7 +181,7 @@ Define OVERRIDE_POLICY "AuthConfig FileInfo Indexes Limit Options=Indexes,MultiV
     php_value upload_max_filesize 64M
   </IfDefine>
 
-  AllowOverride AuthConfig FileInfo Indexes Limit Options=Indexes,MultiViews,SSLOptions
+  AllowOverride AuthConfig FileInfo Indexes Limit Options=Indexes,MultiViews,SymLinksIfOwnerMatch
   Options FollowSymLinks
   RewriteOptions InheritBefore
   RewriteBase "/var/www/html"
