Only include files within conf.d/ ending in .conf
Signed-off-by: Matt Saladna <matt@apisnetworks.com>

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -389,7 +389,7 @@ Define VIRTUAL_BASE /home/virtual
 # BEGIN AMENDMENTS
 # END AMENDMENTS
 
-IncludeOptional conf.d/*
+IncludeOptional conf.d/*.conf
 Include conf/httpd-custom.conf
 
 <IfModule cgroup_module>
