--- a/SOURCES/httpd-custom.conf
+++ b/SOURCES/httpd-custom.conf
@@ -1,6 +1,7 @@
 Listen 80
 
 <VirtualHost _default_:80>
+	ServerName localhost.localdomain
 	RewriteEngine On
 	RewriteOptions Inherit
 </VirtualHost>
@@ -8,6 +9,7 @@ Listen 80
 <IfModule ssl_module>
 	Listen 443
 	<VirtualHost _default_:443>
+		ServerName localhost.localdomain
 		SSLEngine On
 		RewriteEngine On
 		RewriteOptions Inherit
