Use new access directive

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -132,7 +132,7 @@ Group apache
 
 <IfDefine !PHP_INSTALLED>
   <Files "*.php">
-    Deny from all
+    Require all denied
   </Files>
 </IfDefine>
 
@@ -210,9 +210,7 @@ HostnameLookups off
 # The following lines prevent .htaccess and .htpasswd files from being
 # viewed by Web clients.
 <Files ".*">
-    Order allow,deny
-    Deny from all
-    Satisfy All
+    Require all denied
 </Files>
 
 <IfModule mime_module>
