Update proxy timeout to 60 seconds

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -139,6 +139,7 @@ Group apache
 DocumentRoot "/var/www/html"
 
 Timeout 30
+ProxyTimeout 60
 ServerTokens Prod
 KeepAliveTimeout 3
 ServerSignature Off
