--- a/SOURCES/httpd-apnscp-rewrite-map.conf
+++ b/SOURCES/httpd-apnscp-rewrite-map.conf
@@ -41,7 +41,7 @@ RewriteCond /home/virtual/site%{ENV:SITE_ID}/fst/var/subdomain/%{ENV:__S2}/html 
 RewriteRule ^/(.*)$ /home/virtual/site%{ENV:SITE_ID}/fst/var/subdomain/%{ENV:__S2}/html/$1 [L,E=L-_%{ENV:__S2}:1,E=VPATH:/home/virtual/site%{ENV:SITE_ID}/fst/var/subdomain/%{ENV:__S2}/html]
 
 RewriteCond %{ENV:__S2} ^mail|^horde|^roundcube
-RewriteRule ^(.*)$ /var/www/html/%{ENV:__S2}/$1 [L]
+RewriteRule ^(.*)$ https://%{ENV:HOSTNAME}/%{ENV:__S2}/$1 [R,L]
 
 # Fallthrough to primary domain. Requires DNS record on bogus subdomain to work
 RewriteRule ^ - [E=L-%{ENV:__S1}:1]
