Populate htcacheclean PID directory prestart

--- a/SOURCES/htcacheclean.service
+++ b/SOURCES/htcacheclean.service
@@ -6,6 +6,8 @@ Documentation=man:htcacheclean(8)
 [Service]
 Type=forking
 User=apache
+PermissionsStartOnly=true
 PIDFile=/run/httpd/htcacheclean/pid
 EnvironmentFile=/etc/sysconfig/htcacheclean
+ExecPreStart=/bin/sh -c '[[ -d /run/httpd/htcacheclean ]] || mkdir -p /run/httpd/htcacheclean && chown apache /run/httpd/htcacheclean && chmod 700 /run/httpd/htcacheclean'
 ExecStart=/usr/sbin/htcacheclean -P /run/httpd/htcacheclean/pid -d $INTERVAL -p $CACHE_ROOT -l $LIMIT $OPTIONS
