Relocate amendments to separate file

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -386,6 +386,7 @@ Define VIRTUAL_BASE /home/virtual
 </IfModule>
 
 # BEGIN AMENDMENTS
+IncludeOptional conf/apnscp-amendments.conf
 # END AMENDMENTS
 
 IncludeOptional conf.d/*.conf
