--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -190,7 +190,7 @@ Define OVERRIDE_POLICY "AuthConfig FileInfo Indexes Limit Options=Indexes,MultiV
 </Directory>
 
 <DirectoryMatch "^/var/www/html/(?:horde|roundcube|webmail|mail|phpMyAdmin|phpPgAdmin)">
-    RewriteCond %{HTTPS} !^on$
+    RewriteCond %{HTTPS} !=on
     RewriteRule ^/var/www/html/(.*)$ https://%{ENV:HOSTNAME}/$1 [R=307,L]
 </DirectoryMatch>
 
