--- a/SOURCES/httpd.service
+++ b/SOURCES/httpd.service
@@ -29,7 +29,7 @@ Nice=-10
 LimitNOFILE=100000
 LimitCPU=1800
 LimitRSS=1000000
-LimitFSIZE=3194304
+LimitFSIZE=4G
 LimitDATA=infinity
 LimitAS=infinity
 LimitCORE=0
