mod_systemd backport

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -101,6 +101,7 @@ LoadModule authn_core_module modules/mod_authn_core.so
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule http2_module         modules/mod_http2.so
 LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
+LoadModule systemd_module modules/mod_systemd.so
 
 <IfDefine BROTLI>
 LoadModule brotli_module modules/mod_brotli.so
