Add STRICT directive. Controls handling of unrecognized variables, such as php_value when libphp is unloaded

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -149,6 +149,9 @@ PidFile run/httpd.pid
 
 <IfDefine !OVERRIDE_POLICY>
 Define OVERRIDE_POLICY "AuthConfig FileInfo Indexes Limit Options=Indexes,MultiViews,ExecCGI,SymLinksIfOwnerMatch"
+<IfDefine !STRICT>
+Define OVERRIDE_POLICY "${OVERRIDE_POLICY} Nonfatal=All"
+</IfDefine>
 </IfDefine>
 
 <Directory />
