Limit .well-known/ rewrite to ACME challenges (RFC8555)

--- a/SOURCES/httpd-apnscp-rewrite-map.conf
+++ b/SOURCES/httpd-apnscp-rewrite-map.conf
@@ -14,7 +14,7 @@ RewriteRule ^ - [L,R=400]
 </IfDefine>
 
 RewriteRule ^/cpadmin https://%{ENV:HOSTNAME}:2083/login?domain=%{HTTP_HOST} [L]
-RewriteRule ^/.well-known/(.*)$ /tmp/acme/.well-known/$1 [L]
+RewriteRule ^/.well-known/(acme-challenge/.*)$ /tmp/acme/.well-known/$1 [L]
 # Thunderbird
 RewriteRule ^/.well-known/autoconfig/(mail/.*) /var/www/html/autodiscover.php [QSA,L]
 # Outlook
