Convert FollowSymLinks into SymLinksIfOwnerMatch

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -154,7 +154,7 @@ Define OVERRIDE_POLICY "${OVERRIDE_POLICY} Nonfatal=All"
 </IfDefine>
 
 <Directory />
-  Options FollowSymLinks
+  Options SymLinksIfOwnerMatch
   AllowOverride None
 </Directory>
 
@@ -186,7 +186,6 @@ Define OVERRIDE_POLICY "${OVERRIDE_POLICY} Nonfatal=All"
   </IfDefine>
 
   AllowOverride AuthConfig FileInfo Indexes Limit Options=Indexes,MultiViews,SymLinksIfOwnerMatch
-  Options FollowSymLinks
   RewriteOptions InheritBefore
   RewriteBase "/var/www/html"
   RewriteRule dummyset\.php$ /var/www/html/dummyset.php [L]
