Disable TLS v1.0/v1.1 Disable Pagespeed transformation on system directories

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -184,7 +184,6 @@ Define OVERRIDE_POLICY "${OVERRIDE_POLICY} Nonfatal=All"
     php_admin_value open_basedir "/var/www:/etc:/var/lib:/tmp:/usr:/.socket"
     php_value upload_max_filesize 64M
   </IfDefine>
-
   AllowOverride AuthConfig FileInfo Indexes Limit Options=Indexes,MultiViews,SymLinksIfOwnerMatch
   RewriteOptions InheritBefore
   RewriteBase "/var/www/html"
@@ -278,8 +277,12 @@ AddType application/x-httpd-php-source .phps
   SSLSessionCache        shmcb:/tmp/ssl_scache(512000)
   SSLSessionCacheTimeout  300
   SSLSessionTickets on
-
-  SSLProtocol all -SSLv2 -SSLv3
+  <IfDefine INSECURE_SSL>
+    SSLProtocol all -SSLv2 -SSLv3
+  </IfDefine>
+  <IfDefine !INSECURE_SSL>
+    SSLProtocol TLSv1.2
+  </IfDefine>
   SSLCipherSuite ECDHE-RSA-AES128-GCM-SHA256:HIGH:MEDIUM:!MD5:!RC4
   SSLHonorCipherOrder on
   SSLStaplingResponderTimeout 5
@@ -392,6 +395,11 @@ IncludeOptional conf/apnscp-amendments.conf
 # END AMENDMENTS
 
 IncludeOptional conf.d/*.conf
+<Directory /var/www/html>
+  <IfModule pagespeed_module>
+    ModPagespeedRewriteLevel PassThrough
+  </IfModule>
+</Directory>
 Include conf/httpd-custom.conf
 
 <IfModule cgroup_module>
