Raise post_max_size to match upload_max_filesize

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -118,6 +118,7 @@ LoadModule brotli_module modules/mod_brotli.so
 
 User apache
 Group apache
+Mutex posixsem default
 
 # Check for PHP presence
 <IfModule php7_module>
@@ -183,6 +184,7 @@ Define OVERRIDE_POLICY "${OVERRIDE_POLICY} Nonfatal=All"
   <IfDefine PHP_INSTALLED>
     php_admin_value open_basedir "/var/www:/etc:/var/lib:/tmp:/usr:/.socket"
     php_value upload_max_filesize 64M
+    php_value post_max_size 64M
   </IfDefine>
   AllowOverride AuthConfig FileInfo Indexes Limit Options=Indexes,MultiViews,SymLinksIfOwnerMatch
   RewriteOptions InheritBefore
