Strip asset checks if mod_php is not present Ignore fst/ => shadow/ substitution for SCRIPT_FILENAME

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -352,11 +352,14 @@ Include conf/httpd-apnscp-rewrite-map.conf
 Define VIRTUAL_BASE /home/virtual
 
 # BEGIN COMMON ASSETS
-<DirectoryMatch "^${VIRTUAL_BASE}/site[0-9]+/fst/(?:var/www|home/[^/]*)/.+/(.*/)?(?:wp-content/uploads/|wp-content/cache|cache/|sites/default/).*$">
-  RemoveHandler .pl .py .cgi
-  RemoveType .php
-  AllowOverride None
-</DirectoryMatch>
+<IfDefine PHP_INSTALLED>
+  # <Files> evaluates after <Directory> and always wins
+  <DirectoryMatch "^${VIRTUAL_BASE}/site[0-9]+/fst/(?:var/www|home/[^/]*)/.+/(.*/)?(?:wp-content/uploads/|wp-content/cache|cache/|sites/default/).*$">
+    RemoveHandler .pl .py .cgi
+    RemoveType .php
+    AllowOverride None
+  </DirectoryMatch>
+</IfDefine>
 # END COMMON ASSETS
 
 # BEGIN PHP CONFIG
