Fallback to PHP-FPM

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -400,11 +400,23 @@ IncludeOptional conf/apnscp-amendments.conf
 # END AMENDMENTS
 
 IncludeOptional conf.d/*.conf
+
 <Directory /var/www/html>
   <IfModule pagespeed_module>
     ModPagespeedRewriteLevel PassThrough
   </IfModule>
+
+  <IfDefine !PHP_INSTALLED> 
+    <Files "*.php">
+      # Negate protection from libphp missing
+      Require all granted
+      <If "-f %{SCRIPT_FILENAME}">
+        SetHandler "proxy:unix:/run/php-fpm/MAIN.socket|fcgi://localhost"
+      </If>
+    </Files>
+  </IfDefine>
 </Directory>
+
 Include conf/httpd-custom.conf
 
 <IfModule cgroup_module>
