Flexible SSL compatibility

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -199,6 +199,8 @@ Define OVERRIDE_POLICY "${OVERRIDE_POLICY} Nonfatal=All"
 
 <DirectoryMatch "^/var/www/html/(?:horde|roundcube|webmail|mail|phpMyAdmin|phpPgAdmin)">
     RewriteCond %{HTTPS} !=on
+    # Flexible SSL compatibility
+    RewriteCond %{HTTP:X-Forwarded-Proto} !=https
     RewriteRule ^/var/www/html/(.*)$ https://%{ENV:HOSTNAME}/$1 [R=307,L]
 </DirectoryMatch>
 
