PHP8 drops phpX_module scheme

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -125,13 +125,13 @@ Group apache
 Mutex posixsem default
 
 # Check for PHP presence
+<IfModule php_module>
+  Define PHP_INSTALLED
+</IfModule>
 <IfModule php7_module>
   Define PHP_INSTALLED
 </IfModule>
 <IfModule php5_module>
-  Define PHP_INSTALLED
-</IfModule>
-<IfModule php8_module>
   Define PHP_INSTALLED
 </IfModule>
 
