Set 5 minute proxy timeout for use with fetchmail Enable TLS v1.3

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -280,10 +280,10 @@ AddType application/x-httpd-php-source .phps
   SSLSessionCacheTimeout  300
   SSLSessionTickets on
   <IfDefine INSECURE_SSL>
-    SSLProtocol all -SSLv2 -SSLv3
+    SSLProtocol all -SSLv3 -SSLv2
   </IfDefine>
   <IfDefine !INSECURE_SSL>
-    SSLProtocol TLSv1.2
+    SSLProtocol all -TLSv1.1 -TLSv1 -SSLv3 -SSLv2
   </IfDefine>
   SSLCipherSuite ECDHE-RSA-AES128-GCM-SHA256:HIGH:MEDIUM:!MD5:!RC4
   SSLHonorCipherOrder on
@@ -409,7 +409,7 @@ IncludeOptional conf.d/*.conf
   <IfDefine !PHP_INSTALLED> 
     <Files "*.php">
       <If "-f %{SCRIPT_FILENAME}">
-        SetHandler "proxy:unix:/run/php-fpm/MAIN.socket|fcgi://localhost"
+        SetHandler "proxy:unix:/run/php-fpm/MAIN.socket|fcgi://localhost timeout=300"
       </If>
     </Files>
   </IfDefine>
