Reintroduce FollowSymlinks as PrivilegedSymlinks Cleanup SysV script TLS_CHACHA20_POLY1305_SHA256 cipher support Use /dev/random for startup entropy, urandom for connections

--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -153,7 +153,7 @@ Define OVERRIDE_POLICY "${OVERRIDE_POLICY} Nonfatal=All"
 </IfDefine>
 
 <Directory />
-  Options SymLinksIfOwnerMatch
+  Options PrivilegedSymlinks
   AllowOverride None
 </Directory>
 
@@ -254,9 +254,9 @@ EnableMMAP on
   ServerLimit           10
   StartServers           1
   ThreadsPerChild       20
-  MaxRequestsPerChild 1024
+  MaxConnectionsPerChild 1024
   MaxRequestWorkers 200
-  AsyncRequestWorkerFactor 2
+  AsyncRequestWorkerFactor 3
 </IfModule>
 
 
@@ -276,8 +276,8 @@ AddType application/x-httpd-php-source .phps
 
 <IfModule ssl_module>
   SSLPassPhraseDialog  builtin
-  SSLSessionCache        shmcb:/tmp/ssl_scache(512000)
-  SSLSessionCacheTimeout  300
+  SSLSessionCache        shmcb:/tmp/ssl_scache(1048576)
+  SSLSessionCacheTimeout  600
   SSLSessionTickets on
   <IfDefine INSECURE_SSL>
     SSLProtocol all -SSLv3 -SSLv2
@@ -286,10 +286,12 @@ AddType application/x-httpd-php-source .phps
     SSLProtocol all -TLSv1.1 -TLSv1 -SSLv3 -SSLv2
   </IfDefine>
   SSLCipherSuite ECDHE-RSA-AES128-GCM-SHA256:HIGH:MEDIUM:!MD5:!RC4
+  SSLCipherSuite TLSv1.3 TLS_CHACHA20_POLY1305_SHA256:TLS_AES_256_GCM_SHA384
   SSLHonorCipherOrder on
   SSLStaplingResponderTimeout 5
   SSLStaplingReturnResponderErrors on
   SSLRandomSeed startup builtin
+  SSLRandomSeed startup "file:/dev/urandom" 512
   SSLRandomSeed connect builtin
   SSLStaplingCache shmcb:/tmp/ocsp(256000)
 
