--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -122,7 +122,7 @@ LoadModule brotli_module modules/mod_brotli.so
 
 User apache
 Group apache
-Mutex posixsem default
+Mutex pthread default
 
 # Check for PHP presence
 <IfModule php_module>
