--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -254,7 +254,12 @@ EnableMMAP on
   ServerLimit           10
   StartServers           1
   ThreadsPerChild       20
-  MaxConnectionsPerChild 1024
+  <IfDefine PHP_INSTALLED>
+    MaxConnectionsPerChild 1024
+  </IfDefine>
+  <IfDefine !PHP_INSTALLED>
+    MaxConnectionsPerChild 10240
+  </IfDefine>
   MaxRequestWorkers 200
   AsyncRequestWorkerFactor 3
 </IfModule>
