Multihomed machines will report the client IP of the matching SERVER_ADDR defined within vhost during resolution. This can be used, if exported to expr(), as a means to detect local traffic thereby skipping bandwidth logging.

--- a/SOURCES/httpd-apnscp-rewrite-map.conf
+++ b/SOURCES/httpd-apnscp-rewrite-map.conf
@@ -1,6 +1,7 @@
 # (c) 2018 Apis Networks
 # Domain rewrite maps
 SetEnvIfNoCase Host ^(?:www\.)?+([^:]+) DOMAIN=$1
+SetEnvIfExpr "%{SERVER_ADDR} == %{REMOTE_ADDR}" is-local
 RewriteEngine Off
 
 <IfDefine !BYPASS_HTTP10>
