--- a/SOURCES/httpd-apnscp-rewrite-map.conf
+++ b/SOURCES/httpd-apnscp-rewrite-map.conf
@@ -27,7 +27,7 @@ RewriteRule ^ - [S=1,E=VHOST:%{ENV:DOMAIN},E=VPATH:%1,E=L-%{ENV:DOMAIN}:1]
 # No match, primary domain. Skip to subdomains
 RewriteRule ^ - [S=1,E=VPATH:%{DOCUMENT_ROOT}]
 
-RewriteRule ^(.*)$ %{ENV:VPATH}$1 [L]
+RewriteRule ^(.*)$ %{ENV:VPATH}$1 [L,UnsafePrefixStat]
 
 RewriteCond %{ENV:DOMAIN} ^([^.]++)\.([^.]{3,}+\..++)$
 RewriteRule ^ - [E=__S1:%2,E=__S2:%1,S=1]
