Add SSL/HSTS redirect

--- a/SOURCES/httpd-apnscp-rewrite-map.conf
+++ b/SOURCES/httpd-apnscp-rewrite-map.conf
@@ -14,6 +14,16 @@ RewriteCond ${HTTP10_MAP:%{ENV:DOMAIN}|NOT-FOUND} =NOT-FOUND
 RewriteRule ^ - [L,R=400]
 </IfDefine>
 
+RewriteMap SSL_MAP "dbm:conf/ssl"
+RewriteCond ${SSL_MAP:%{ENV:SITE_ID}\:%{ENV:DOMAIN}} !=""
+RewriteRule ^ - [E=HSTS:${SSL_MAP:%{ENV:SITE_ID}\:%{ENV:DOMAIN}},C]
+RewriteCond %{HTTPS} !=on
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R]
+
+Header set Strict-Transport-Security "max-age=8663072000" "expr=reqenv('HSTS') == 1"
+Header set Strict-Transport-Security "max-age=8663072000; includeSubDomains" "expr=reqenv('HSTS') == 2"
+Header set Strict-Transport-Security "max-age=8663072000; includeSubDomains; preload" "expr=reqenv('HSTS') == 3"
+
 RewriteRule ^/cpadmin https://%{ENV:HOSTNAME}:2083/login?domain=%{HTTP_HOST} [L]
 RewriteRule ^/.well-known/(acme-challenge/.*)$ /tmp/acme/.well-known/$1 [L]
 # Thunderbird
