--- a/SOURCES/httpd.conf
+++ b/SOURCES/httpd.conf
@@ -24,11 +24,9 @@ ServerRoot "/etc/httpd"
 GracefulShutdownTimeout 15
 
 LoadModule authn_file_module modules/mod_authn_file.so
-LoadModule authn_dbm_module modules/mod_authn_dbm.so
 LoadModule authz_host_module modules/mod_authz_host.so
 LoadModule authz_groupfile_module modules/mod_authz_groupfile.so
 LoadModule authz_user_module modules/mod_authz_user.so
-LoadModule authz_dbm_module modules/mod_authz_dbm.so
 LoadModule auth_basic_module modules/mod_auth_basic.so
 
 <IfDefine !NO_CACHE>
@@ -59,7 +57,6 @@ LoadModule logio_module modules/mod_logio.so
 LoadModule env_module modules/mod_env.so
 LoadModule expires_module modules/mod_expires.so
 LoadModule headers_module modules/mod_headers.so
-LoadModule unique_id_module modules/mod_unique_id.so
 LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
@@ -105,6 +102,7 @@ LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule http2_module         modules/mod_http2.so
 LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
 LoadModule systemd_module modules/mod_systemd.so
+LoadModule macro_module modules/mod_macro.so
 
 <IfDefine BROTLI>
 LoadModule brotli_module modules/mod_brotli.so
@@ -400,6 +398,27 @@ Define VIRTUAL_BASE /home/virtual
   CacheIgnoreHeaders Set-Cookie
   # Disable caching by default, allow sites/locations to enroll independently
   SetEnv no-cache
+</IfModule>
+
+<IfModule macro_module>
+  <Macro PHP_CONTAINER $socket $name $root>
+    <Files "*.php">
+      <If "-f %{SCRIPT_FILENAME}">
+	Use PHP_BACKEND $socket $name $root
+      </If>
+    </Files>
+  </Macro>
+
+  <Macro PHP_BACKEND $socket $name $root>
+    Use GENERIC_BACKEND $socket $name $root unix fcgi
+  </Macro>
+
+  <Macro GENERIC_BACKEND $socket $name $root $family $proto>
+    # Send jailed DOCUMENT_ROOT path
+    ProxyFCGISetEnvIf "reqenv('VPATH') =~ m|^$root(/.++)$|" DOCUMENT_ROOT "$1"
+    ProxyFCGISetEnvIf "true" SCRIPT_FILENAME "%{reqenv:DOCUMENT_ROOT}%{reqenv:SCRIPT_NAME}"
+    SetHandler "proxy:$family:$socket|$proto://$name"
+  </Macro>
 </IfModule>
 
 # BEGIN AMENDMENTS
